# MiroFish-Offline

./: .env.example  .gitignore  ARCHITECTURE_OPTIONS.md  DESIGN.md  Dockerfile  README.md  ROADMAP.md  STRATEGIC_PLAN.md  TODOS.md  claude.md  docker-compose.yml  future_features.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker-image.yml  tests.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  backtest.py  digital_twin.py  graph.py  prediction.py  report.py  simulation.py
backend/app/models/: backtest.py  position.py  task.py  (+2 more)
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: conftest.py  test_backtest_api.py  test_backtester.py  test_backtester_categories.py  test_backtester_metrics.py  test_calibrator.py  test_calibrator_categories.py  test_config.py  test_market_classifier.py  test_paper_trader.py  test_polymarket_client.py  test_prediction_manager_categories.py  test_prediction_manager_di.py  test_prediction_store.py  test_retry.py  test_sqlite_store.py
docs/: PRD_polymarket_monetization.md  local-run-findings.md  progress.md
docs/designs/: polymarket-monetization-expansion.md
frontend/: index.html
frontend/public/: home-styles.css
frontend/src/: App.vue
src/matfyz_graphrag/: __init__.py
tasks/: backtest.py  backtest_results.json  batch3_results.json  batch_results.json  live_markets.json  scored_results.json  todo.md
tests/: __init__.py
(+92 files in other folders)
